cleanup api routes
